Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "VinFast hợp tác mở 22 showroom xe điện tại Indonesia",
+    "content": "VinFast, công ty của tỷ phú Phạm Nhật Vượng, đã ký biên bản ghi nhớ với PT Arimbi Amartapura để phát triển 22 showroom xe điện tại Indonesia từ năm 2025 đến 2027. Hợp tác này nhằm mục đích tối ưu hóa hoạt động, giảm chi phí và nâng cao uy tín thương hiệu, với 11 showroom dự kiến sẽ mở cửa trong năm 2025, chủ yếu tại Jakarta và Bandung. VinFast đã có 21 cửa hàng tại Indonesia và cam kết cung cấp dịch vụ sạc miễn phí đến năm 2028.",
+    "link": "https://tuoitre.vn/vinfast-hop-tac-mo-22-showroom-xe-dien-tai-indonesia-20250322121327868.htm",
+    "cat": "oto-xe-may",
+    "positivity": 9,
+    "importance": 8,
+    "question": "VinFast sẽ mở bao nhiêu showroom xe điện tại Indonesia?",
+    "answers": [
+      {
+        "text": "22 showroom",
+        "correct": true
+      },
+      {
+        "text": "15 showroom",
+        "correct": false
+      },
+      {
+        "text": "10 showroom",
+        "correct": false
+      },
+      {
+        "text": "30 showroom",
+        "correct": false
+      },
+      {
+        "text": "5 showroom",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tiết lộ món quà đặc biệt ông Putin từng gửi tặng ông Trump",
     "content": "Trong một cuộc phỏng vấn, Steve Witkoff, đặc phái viên của Tổng thống Mỹ Donald Trump, tiết lộ rằng Tổng thống Nga Vladimir Putin đã gửi tặng ông Trump một bức chân dung do nghệ sĩ hàng đầu của Nga vẽ. Ông Witkoff cũng cho biết Putin đã cầu nguyện cho Trump sau sự cố ám sát hụt trong thời gian ông vận động tranh cử. Ông Trump đã bày tỏ sự xúc động khi nghe về tình bạn và sự quan tâm của Putin đối với mình.",
     "link": "https://dantri.com.vn/the-gioi/tiet-lo-mon-qua-dac-biet-ong-putin-tung-gui-tang-ong-trump-20250322120122854.htm",
@@ -734,33 +765,6 @@
     ]
   },
   {
-    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
-    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
-    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 5,
-    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
-    "answers": [
-      {
-        "text": "Các số đảo ngược kết quả phép cộng",
-        "correct": true
-      },
-      {
-        "text": "Kết quả là tổng các số bên trái",
-        "correct": false
-      },
-      {
-        "text": "Kết quả là số lớn nhất trong dãy",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần cộng các số lại với nhau",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đặt stent sau bao lâu thì ổn định?",
     "content": "Sau khi đặt stent mạch vành, bệnh nhân thường cần nằm viện từ 2-3 ngày để theo dõi sức khỏe. Thời gian hồi phục có thể khoảng một tuần đối với trường hợp không khẩn cấp, nhưng nếu cần đặt stent ngay lập tức do nhồi máu cơ tim, có thể mất vài tuần đến hơn một tháng để bình phục hoàn toàn. Bệnh nhân cần tuân thủ chế độ dinh dưỡng và tránh hoạt động nặng để hồi phục nhanh chóng.",
     "link": "https://vnexpress.net/dat-stent-sau-bao-lau-thi-on-dinh-4864401.html",
@@ -787,6 +791,33 @@
       },
       {
         "text": "3 tháng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
+    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
+    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 5,
+    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
+    "answers": [
+      {
+        "text": "Các số đảo ngược kết quả phép cộng",
+        "correct": true
+      },
+      {
+        "text": "Kết quả là tổng các số bên trái",
+        "correct": false
+      },
+      {
+        "text": "Kết quả là số lớn nhất trong dãy",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần cộng các số lại với nhau",
         "correct": false
       }
     ]
@@ -1762,32 +1793,28 @@
     ]
   },
   {
-    "title": "Triệu Lệ Dĩnh chấp nhận trở nên xấu xí để \"bước qua vùng an toàn\"",
-    "content": "Triệu Lệ Dĩnh đã chấp nhận thay đổi hình ảnh của mình bằng cách nhận vai diễn khó khăn trong bộ phim \"Hoa hướng dương\", nơi cô vào vai một nữ tù nhân tìm lại cuộc sống sau khi mãn hạn tù. Với tạo hình giản dị và gần gũi, cô quyết tâm phá bỏ hình ảnh hoàn hảo để thử thách bản thân trong diễn xuất. Nữ diễn viên đang nỗ lực khẳng định vị thế của mình trong làng giải trí và nhận được sự khen ngợi từ đạo diễn và khán giả. Phim dự kiến ra mắt vào ngày 4/4 tới.",
-    "link": "https://dantri.com.vn/giai-tri/trieu-le-dinh-chap-nhan-tro-nen-xau-xi-de-buoc-qua-vung-an-toan-20250321111238551.htm",
-    "cat": "giai-tri",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Triệu Lệ Dĩnh quyết định trở nên xấu xí trong vai diễn mới?",
+    "title": "\"Sẽ là nói dối, nếu ta nói với trẻ rằng thành công chỉ đến từ sự nỗ lực\"",
+    "content": "Nam diễn viên Anthony Mackie vừa chia sẻ rằng sẽ là sai lầm nếu dạy trẻ em rằng thành công chỉ đến từ sự nỗ lực. Ông nhấn mạnh rằng yếu tố may mắn cũng đóng vai trò quan trọng trong việc đạt được thành công, và nhiều người nổi tiếng đã thừa nhận điều này. Mackie, người đã phải làm việc hơn 10.000 giờ trước khi có cơ hội lớn trong sự nghiệp, cho rằng sự may mắn không thể bị bỏ qua trong bất kỳ hành trình nào hướng tới thành công.",
+    "link": "https://dantri.com.vn/giao-duc/se-la-noi-doi-neu-ta-noi-voi-tre-rang-thanh-cong-chi-den-tu-su-no-luc-20250320211508860.htm",
+    "cat": "giao-duc",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao Anthony Mackie cho rằng may mắn cũng quan trọng trong thành công?",
     "answers": [
       {
-        "text": "Để thử thách bản thân và khẳng định diễn xuất.",
+        "text": "Vì thành công không chỉ đến từ nỗ lực mà còn do may mắn.",
         "correct": true
       },
       {
-        "text": "Để thu hút sự chú ý của khán giả.",
+        "text": "Vì nỗ lực là yếu tố duy nhất quyết định thành công.",
         "correct": false
       },
       {
-        "text": "Để đổi mới phong cách cá nhân.",
+        "text": "Vì mọi người đều có thể thành công mà không cần nỗ lực.",
         "correct": false
       },
       {
-        "text": "Để hợp tác cùng với đạo diễn nổi tiếng.",
-        "correct": false
-      },
-      {
-        "text": "Để thể hiện sự tự tin hơn trong diễn xuất.",
+        "text": "Vì chỉ những người tài năng mới thành công.",
         "correct": false
       }
     ]
@@ -1820,28 +1847,32 @@
     ]
   },
   {
-    "title": "\"Sẽ là nói dối, nếu ta nói với trẻ rằng thành công chỉ đến từ sự nỗ lực\"",
-    "content": "Nam diễn viên Anthony Mackie vừa chia sẻ rằng sẽ là sai lầm nếu dạy trẻ em rằng thành công chỉ đến từ sự nỗ lực. Ông nhấn mạnh rằng yếu tố may mắn cũng đóng vai trò quan trọng trong việc đạt được thành công, và nhiều người nổi tiếng đã thừa nhận điều này. Mackie, người đã phải làm việc hơn 10.000 giờ trước khi có cơ hội lớn trong sự nghiệp, cho rằng sự may mắn không thể bị bỏ qua trong bất kỳ hành trình nào hướng tới thành công.",
-    "link": "https://dantri.com.vn/giao-duc/se-la-noi-doi-neu-ta-noi-voi-tre-rang-thanh-cong-chi-den-tu-su-no-luc-20250320211508860.htm",
-    "cat": "giao-duc",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao Anthony Mackie cho rằng may mắn cũng quan trọng trong thành công?",
+    "title": "Triệu Lệ Dĩnh chấp nhận trở nên xấu xí để \"bước qua vùng an toàn\"",
+    "content": "Triệu Lệ Dĩnh đã chấp nhận thay đổi hình ảnh của mình bằng cách nhận vai diễn khó khăn trong bộ phim \"Hoa hướng dương\", nơi cô vào vai một nữ tù nhân tìm lại cuộc sống sau khi mãn hạn tù. Với tạo hình giản dị và gần gũi, cô quyết tâm phá bỏ hình ảnh hoàn hảo để thử thách bản thân trong diễn xuất. Nữ diễn viên đang nỗ lực khẳng định vị thế của mình trong làng giải trí và nhận được sự khen ngợi từ đạo diễn và khán giả. Phim dự kiến ra mắt vào ngày 4/4 tới.",
+    "link": "https://dantri.com.vn/giai-tri/trieu-le-dinh-chap-nhan-tro-nen-xau-xi-de-buoc-qua-vung-an-toan-20250321111238551.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Triệu Lệ Dĩnh quyết định trở nên xấu xí trong vai diễn mới?",
     "answers": [
       {
-        "text": "Vì thành công không chỉ đến từ nỗ lực mà còn do may mắn.",
+        "text": "Để thử thách bản thân và khẳng định diễn xuất.",
         "correct": true
       },
       {
-        "text": "Vì nỗ lực là yếu tố duy nhất quyết định thành công.",
+        "text": "Để thu hút sự chú ý của khán giả.",
         "correct": false
       },
       {
-        "text": "Vì mọi người đều có thể thành công mà không cần nỗ lực.",
+        "text": "Để đổi mới phong cách cá nhân.",
         "correct": false
       },
       {
-        "text": "Vì chỉ những người tài năng mới thành công.",
+        "text": "Để hợp tác cùng với đạo diễn nổi tiếng.",
+        "correct": false
+      },
+      {
+        "text": "Để thể hiện sự tự tin hơn trong diễn xuất.",
         "correct": false
       }
     ]
@@ -2976,28 +3007,28 @@
     ]
   },
   {
-    "title": "Djokovic không ký tên trong đơn kiện ATP",
-    "content": "Novak Djokovic, mặc dù là đồng sáng lập Hiệp hội các tay vợt chuyên nghiệp (PTPA), đã không ký tên vào đơn kiện ATP về vấn đề tham nhũng. Trong khi nhiều tay vợt khác như Nick Kyrgios và Vasek Pospisil đã tham gia ký tên, Djokovic cho biết ông không đồng ý với một số nội dung trong hồ sơ kiện. Hành động này có thể được coi là chiến lược nhằm bảo vệ quyền lợi thi đấu của Djokovic trong ATP Tour, nhưng cũng làm giảm sức nặng của đơn kiện. PTPA đã đâm đơn kiện ATP và các tổ chức khác ở nhiều quốc gia, yêu cầu cải cách hệ thống quần vợt hiện tại.",
-    "link": "https://vnexpress.net/djokovic-khong-ky-ten-trong-don-kien-atp-4864260.html",
-    "cat": "the-thao",
-    "positivity": 6,
+    "title": "Bạn trẻ thích thú nhận quà tại gian hàng Việt Nam xanh",
+    "content": "Vào sáng ngày 21-3, gian hàng chương trình Việt Nam Xanh tại Lễ hội Thanh niên TP.HCM thu hút sự tham gia của nhiều bạn trẻ. Tại đây, các bạn trẻ có cơ hội chơi game và làm khảo sát để nhận những phần quà hấp dẫn như ly uống nước, nón kết và các sản phẩm chăm sóc cá nhân. Gian hàng không chỉ mang đến niềm vui mà còn giới thiệu mục tiêu bảo vệ môi trường và phát triển bền vững của chương trình.",
+    "link": "https://tuoitre.vn/ban-tre-thich-thu-nhan-qua-tai-gian-hang-viet-nam-xanh-20250321172330742.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
     "importance": 7,
-    "question": "Tại sao Djokovic không ký tên vào đơn kiện ATP?",
+    "question": "Gian hàng Việt Nam xanh tại Lễ hội Thanh niên TP.HCM có hoạt động gì hấp dẫn?",
     "answers": [
       {
-        "text": "Để bảo vệ quyền lợi thi đấu của mình.",
+        "text": "Chơi game và làm khảo sát để nhận quà",
         "correct": true
       },
       {
-        "text": "Vì không đồng ý với nội dung kiện.",
+        "text": "Chỉ có trưng bày sản phẩm",
         "correct": false
       },
       {
-        "text": "Để thể hiện sự ủng hộ đối với ATP.",
+        "text": "Không có hoạt động gì đặc biệt",
         "correct": false
       },
       {
-        "text": "Vì không muốn gây tranh cãi trong quần vợt.",
+        "text": "Chỉ có diễn thuyết về môi trường",
         "correct": false
       }
     ]
@@ -3030,28 +3061,28 @@
     ]
   },
   {
-    "title": "Bạn trẻ thích thú nhận quà tại gian hàng Việt Nam xanh",
-    "content": "Vào sáng ngày 21-3, gian hàng chương trình Việt Nam Xanh tại Lễ hội Thanh niên TP.HCM thu hút sự tham gia của nhiều bạn trẻ. Tại đây, các bạn trẻ có cơ hội chơi game và làm khảo sát để nhận những phần quà hấp dẫn như ly uống nước, nón kết và các sản phẩm chăm sóc cá nhân. Gian hàng không chỉ mang đến niềm vui mà còn giới thiệu mục tiêu bảo vệ môi trường và phát triển bền vững của chương trình.",
-    "link": "https://tuoitre.vn/ban-tre-thich-thu-nhan-qua-tai-gian-hang-viet-nam-xanh-20250321172330742.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
+    "title": "Djokovic không ký tên trong đơn kiện ATP",
+    "content": "Novak Djokovic, mặc dù là đồng sáng lập Hiệp hội các tay vợt chuyên nghiệp (PTPA), đã không ký tên vào đơn kiện ATP về vấn đề tham nhũng. Trong khi nhiều tay vợt khác như Nick Kyrgios và Vasek Pospisil đã tham gia ký tên, Djokovic cho biết ông không đồng ý với một số nội dung trong hồ sơ kiện. Hành động này có thể được coi là chiến lược nhằm bảo vệ quyền lợi thi đấu của Djokovic trong ATP Tour, nhưng cũng làm giảm sức nặng của đơn kiện. PTPA đã đâm đơn kiện ATP và các tổ chức khác ở nhiều quốc gia, yêu cầu cải cách hệ thống quần vợt hiện tại.",
+    "link": "https://vnexpress.net/djokovic-khong-ky-ten-trong-don-kien-atp-4864260.html",
+    "cat": "the-thao",
+    "positivity": 6,
     "importance": 7,
-    "question": "Gian hàng Việt Nam xanh tại Lễ hội Thanh niên TP.HCM có hoạt động gì hấp dẫn?",
+    "question": "Tại sao Djokovic không ký tên vào đơn kiện ATP?",
     "answers": [
       {
-        "text": "Chơi game và làm khảo sát để nhận quà",
+        "text": "Để bảo vệ quyền lợi thi đấu của mình.",
         "correct": true
       },
       {
-        "text": "Chỉ có trưng bày sản phẩm",
+        "text": "Vì không đồng ý với nội dung kiện.",
         "correct": false
       },
       {
-        "text": "Không có hoạt động gì đặc biệt",
+        "text": "Để thể hiện sự ủng hộ đối với ATP.",
         "correct": false
       },
       {
-        "text": "Chỉ có diễn thuyết về môi trường",
+        "text": "Vì không muốn gây tranh cãi trong quần vợt.",
         "correct": false
       }
     ]
@@ -3420,33 +3451,6 @@
     ]
   },
   {
-    "title": "Phụ nữ tiền mãn kinh ăn gì cân bằng nội tiết?",
-    "content": "Phụ nữ trong giai đoạn tiền mãn kinh thường gặp nhiều triệu chứng khó chịu như mất ngủ, mệt mỏi và bốc hỏa. Để cân bằng nội tiết tố, chế độ dinh dưỡng đóng vai trò quan trọng. Các thực phẩm giàu phytoestrogen như hạt lanh và đậu nành, canxi và vitamin D từ rau lá xanh và sữa, chất xơ từ ngũ cốc và trái cây, cũng như chất béo lành mạnh từ cá béo và hạt chia có thể hỗ trợ giảm triệu chứng. Ngoài ra, bổ sung các tinh chất thiên nhiên cũng giúp cải thiện tình trạng sức khỏe của phụ nữ trong giai đoạn này.",
-    "link": "https://vnexpress.net/phu-nu-tien-man-kinh-an-gi-can-bang-noi-tiet-4864193.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Phụ nữ tiền mãn kinh nên ăn gì để cân bằng nội tiết tố?",
-    "answers": [
-      {
-        "text": "Thực phẩm giàu phytoestrogen như hạt lanh và đậu nành",
-        "correct": true
-      },
-      {
-        "text": "Thịt đỏ và đồ chiên",
-        "correct": false
-      },
-      {
-        "text": "Đồ uống có ga",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm chế biến sẵn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bị ung thư phổi giai đoạn nào cần hóa trị?",
     "content": "Ung thư phổi giai đoạn hai có thể được điều trị bằng hóa trị, tùy thuộc vào tình trạng sức khỏe tổng thể và đặc điểm khối u của bệnh nhân. Hóa trị có thể thực hiện trước hoặc sau phẫu thuật nhằm giảm kích thước khối u hoặc loại bỏ tế bào ung thư còn sót lại. Nếu bệnh ở giai đoạn tiến triển, hóa trị sẽ là phương pháp điều trị chính để giảm triệu chứng và kéo dài thời gian sống. Để có phác đồ điều trị chính xác, bệnh nhân cần được bác sĩ khám và xét nghiệm kỹ lưỡng.",
     "link": "https://vnexpress.net/bi-ung-thu-phoi-giai-doan-nao-can-hoa-tri-4864117.html",
@@ -3469,6 +3473,33 @@
       },
       {
         "text": "Không cần hóa trị nếu không có triệu chứng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Phụ nữ tiền mãn kinh ăn gì cân bằng nội tiết?",
+    "content": "Phụ nữ trong giai đoạn tiền mãn kinh thường gặp nhiều triệu chứng khó chịu như mất ngủ, mệt mỏi và bốc hỏa. Để cân bằng nội tiết tố, chế độ dinh dưỡng đóng vai trò quan trọng. Các thực phẩm giàu phytoestrogen như hạt lanh và đậu nành, canxi và vitamin D từ rau lá xanh và sữa, chất xơ từ ngũ cốc và trái cây, cũng như chất béo lành mạnh từ cá béo và hạt chia có thể hỗ trợ giảm triệu chứng. Ngoài ra, bổ sung các tinh chất thiên nhiên cũng giúp cải thiện tình trạng sức khỏe của phụ nữ trong giai đoạn này.",
+    "link": "https://vnexpress.net/phu-nu-tien-man-kinh-an-gi-can-bang-noi-tiet-4864193.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Phụ nữ tiền mãn kinh nên ăn gì để cân bằng nội tiết tố?",
+    "answers": [
+      {
+        "text": "Thực phẩm giàu phytoestrogen như hạt lanh và đậu nành",
+        "correct": true
+      },
+      {
+        "text": "Thịt đỏ và đồ chiên",
+        "correct": false
+      },
+      {
+        "text": "Đồ uống có ga",
+        "correct": false
+      },
+      {
+        "text": "Thực phẩm chế biến sẵn",
         "correct": false
       }
     ]
@@ -4725,33 +4756,6 @@
       },
       {
         "text": "Công viên Nghĩa Đô",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 xe sang nối đuôi lấn làn trên cao tốc Nội Bài - Lào Cai",
-    "content": "Cảnh sát giao thông đang điều tra vụ việc liên quan đến 5 xe Porsche và một chiếc bán tải lấn làn và vượt ẩu trên cao tốc Nội Bài - Lào Cai vào ngày 19/3. Hình ảnh từ camera hành trình cho thấy nhóm xe này đã chạy với tốc độ cao, liên tục lấn sang làn đường ngược chiều, gây nguy hiểm cho các phương tiện khác. Theo quy định, hành vi lấn làn sẽ bị xử phạt từ 4-6 triệu đồng và có thể tăng lên nếu dẫn đến tai nạn.",
-    "link": "https://vnexpress.net/5-xe-sang-noi-duoi-lan-lan-tren-cao-toc-noi-bai-lao-cai-4864122.html",
-    "cat": "phap-luat",
-    "positivity": 3,
-    "importance": 7,
-    "question": "5 xe sang đã vi phạm gì trên cao tốc Nội Bài - Lào Cai?",
-    "answers": [
-      {
-        "text": "Lấn làn và vượt ẩu",
-        "correct": true
-      },
-      {
-        "text": "Chạy quá tốc độ cho phép",
-        "correct": false
-      },
-      {
-        "text": "Không có giấy phép lái xe",
-        "correct": false
-      },
-      {
-        "text": "Đỗ xe sai quy định",
         "correct": false
       }
     ]
