Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Huyện rộng nhất nước dự kiến giảm từ 17 xã xuống còn 6-7 xã",
+    "content": "Huyện Tương Dương, Nghệ An, hiện có 17 xã, sẽ giảm xuống còn 6-7 xã theo kế hoạch sắp xếp đơn vị hành chính cấp xã của tỉnh. Địa phương này là huyện rộng nhất Việt Nam với diện tích hơn 2.800 km2 và dân số khoảng 80.600 người. Việc sắp xếp nhằm đáp ứng yêu cầu của Trung ương và cải thiện quản lý hành chính trong khu vực.",
+    "link": "https://tuoitre.vn/huyen-rong-nhat-nuoc-du-kien-giam-tu-17-xa-xuong-con-6-7-xa-20250322125003806.htm",
+    "cat": "thoi-su",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Huyện nào ở Nghệ An dự kiến sẽ giảm số xã từ 17 xuống còn 6-7 xã?",
+    "answers": [
+      {
+        "text": "Huyện Tương Dương",
+        "correct": true
+      },
+      {
+        "text": "Huyện Nam Đàn",
+        "correct": false
+      },
+      {
+        "text": "Huyện Đô Lương",
+        "correct": false
+      },
+      {
+        "text": "Huyện Quế Phong",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "VinFast hợp tác mở 22 showroom xe điện tại Indonesia",
     "content": "VinFast, công ty của tỷ phú Phạm Nhật Vượng, đã ký biên bản ghi nhớ với PT Arimbi Amartapura để phát triển 22 showroom xe điện tại Indonesia từ năm 2025 đến 2027. Hợp tác này nhằm mục đích tối ưu hóa hoạt động, giảm chi phí và nâng cao uy tín thương hiệu, với 11 showroom dự kiến sẽ mở cửa trong năm 2025, chủ yếu tại Jakarta và Bandung. VinFast đã có 21 cửa hàng tại Indonesia và cam kết cung cấp dịch vụ sạc miễn phí đến năm 2028.",
     "link": "https://tuoitre.vn/vinfast-hop-tac-mo-22-showroom-xe-dien-tai-indonesia-20250322121327868.htm",
@@ -832,6 +859,33 @@
     ]
   },
   {
+    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
+    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
+    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 5,
+    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
+    "answers": [
+      {
+        "text": "Các số đảo ngược kết quả phép cộng",
+        "correct": true
+      },
+      {
+        "text": "Kết quả là tổng các số bên trái",
+        "correct": false
+      },
+      {
+        "text": "Kết quả là số lớn nhất trong dãy",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần cộng các số lại với nhau",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đặt stent sau bao lâu thì ổn định?",
     "content": "Sau khi đặt stent mạch vành, bệnh nhân thường cần nằm viện từ 2-3 ngày để theo dõi sức khỏe. Thời gian hồi phục có thể khoảng một tuần đối với trường hợp không khẩn cấp, nhưng nếu cần đặt stent ngay lập tức do nhồi máu cơ tim, có thể mất vài tuần đến hơn một tháng để bình phục hoàn toàn. Bệnh nhân cần tuân thủ chế độ dinh dưỡng và tránh hoạt động nặng để hồi phục nhanh chóng.",
     "link": "https://vnexpress.net/dat-stent-sau-bao-lau-thi-on-dinh-4864401.html",
@@ -858,33 +912,6 @@
       },
       {
         "text": "3 tháng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
-    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
-    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 5,
-    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
-    "answers": [
-      {
-        "text": "Các số đảo ngược kết quả phép cộng",
-        "correct": true
-      },
-      {
-        "text": "Kết quả là tổng các số bên trái",
-        "correct": false
-      },
-      {
-        "text": "Kết quả là số lớn nhất trong dãy",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần cộng các số lại với nhau",
         "correct": false
       }
     ]
@@ -1860,33 +1887,6 @@
     ]
   },
   {
-    "title": "\"Sẽ là nói dối, nếu ta nói với trẻ rằng thành công chỉ đến từ sự nỗ lực\"",
-    "content": "Nam diễn viên Anthony Mackie vừa chia sẻ rằng sẽ là sai lầm nếu dạy trẻ em rằng thành công chỉ đến từ sự nỗ lực. Ông nhấn mạnh rằng yếu tố may mắn cũng đóng vai trò quan trọng trong việc đạt được thành công, và nhiều người nổi tiếng đã thừa nhận điều này. Mackie, người đã phải làm việc hơn 10.000 giờ trước khi có cơ hội lớn trong sự nghiệp, cho rằng sự may mắn không thể bị bỏ qua trong bất kỳ hành trình nào hướng tới thành công.",
-    "link": "https://dantri.com.vn/giao-duc/se-la-noi-doi-neu-ta-noi-voi-tre-rang-thanh-cong-chi-den-tu-su-no-luc-20250320211508860.htm",
-    "cat": "giao-duc",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao Anthony Mackie cho rằng may mắn cũng quan trọng trong thành công?",
-    "answers": [
-      {
-        "text": "Vì thành công không chỉ đến từ nỗ lực mà còn do may mắn.",
-        "correct": true
-      },
-      {
-        "text": "Vì nỗ lực là yếu tố duy nhất quyết định thành công.",
-        "correct": false
-      },
-      {
-        "text": "Vì mọi người đều có thể thành công mà không cần nỗ lực.",
-        "correct": false
-      },
-      {
-        "text": "Vì chỉ những người tài năng mới thành công.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đo mật độ xương bằng AI trong 30s",
     "content": "Bệnh viện Đại học Y Hà Nội đã ứng dụng công nghệ trí tuệ nhân tạo (AI) để đo mật độ xương chỉ trong 30 giây, giảm thời gian chờ đợi so với 15 phút trước đây. Phương pháp mới này không chỉ tiết kiệm thời gian mà còn nâng cao độ chính xác trong việc phát hiện bệnh loãng xương, một vấn đề ngày càng nghiêm trọng tại Việt Nam. AI trở thành công cụ hỗ trợ quan trọng cho các bác sĩ trong việc chẩn đoán và điều trị, đồng thời giúp giảm chi phí cho người bệnh.",
     "link": "https://vnexpress.net/do-mat-do-xuong-bang-ai-trong-30s-4863001.html",
@@ -1909,6 +1909,33 @@
       },
       {
         "text": "Giúp tiết kiệm chi phí cho việc phẫu thuật.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Sẽ là nói dối, nếu ta nói với trẻ rằng thành công chỉ đến từ sự nỗ lực\"",
+    "content": "Nam diễn viên Anthony Mackie vừa chia sẻ rằng sẽ là sai lầm nếu dạy trẻ em rằng thành công chỉ đến từ sự nỗ lực. Ông nhấn mạnh rằng yếu tố may mắn cũng đóng vai trò quan trọng trong việc đạt được thành công, và nhiều người nổi tiếng đã thừa nhận điều này. Mackie, người đã phải làm việc hơn 10.000 giờ trước khi có cơ hội lớn trong sự nghiệp, cho rằng sự may mắn không thể bị bỏ qua trong bất kỳ hành trình nào hướng tới thành công.",
+    "link": "https://dantri.com.vn/giao-duc/se-la-noi-doi-neu-ta-noi-voi-tre-rang-thanh-cong-chi-den-tu-su-no-luc-20250320211508860.htm",
+    "cat": "giao-duc",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao Anthony Mackie cho rằng may mắn cũng quan trọng trong thành công?",
+    "answers": [
+      {
+        "text": "Vì thành công không chỉ đến từ nỗ lực mà còn do may mắn.",
+        "correct": true
+      },
+      {
+        "text": "Vì nỗ lực là yếu tố duy nhất quyết định thành công.",
+        "correct": false
+      },
+      {
+        "text": "Vì mọi người đều có thể thành công mà không cần nỗ lực.",
+        "correct": false
+      },
+      {
+        "text": "Vì chỉ những người tài năng mới thành công.",
         "correct": false
       }
     ]
@@ -3545,33 +3572,6 @@
     ]
   },
   {
-    "title": "Phụ nữ tiền mãn kinh ăn gì cân bằng nội tiết?",
-    "content": "Phụ nữ trong giai đoạn tiền mãn kinh thường gặp nhiều triệu chứng khó chịu như mất ngủ, mệt mỏi và bốc hỏa. Để cân bằng nội tiết tố, chế độ dinh dưỡng đóng vai trò quan trọng. Các thực phẩm giàu phytoestrogen như hạt lanh và đậu nành, canxi và vitamin D từ rau lá xanh và sữa, chất xơ từ ngũ cốc và trái cây, cũng như chất béo lành mạnh từ cá béo và hạt chia có thể hỗ trợ giảm triệu chứng. Ngoài ra, bổ sung các tinh chất thiên nhiên cũng giúp cải thiện tình trạng sức khỏe của phụ nữ trong giai đoạn này.",
-    "link": "https://vnexpress.net/phu-nu-tien-man-kinh-an-gi-can-bang-noi-tiet-4864193.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Phụ nữ tiền mãn kinh nên ăn gì để cân bằng nội tiết tố?",
-    "answers": [
-      {
-        "text": "Thực phẩm giàu phytoestrogen như hạt lanh và đậu nành",
-        "correct": true
-      },
-      {
-        "text": "Thịt đỏ và đồ chiên",
-        "correct": false
-      },
-      {
-        "text": "Đồ uống có ga",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm chế biến sẵn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "8 bước lên dây cót tinh thần trước ngày chạy giải",
     "content": "Bài viết hướng dẫn runner 8 bước chuẩn bị tinh thần trước ngày chạy giải, bao gồm việc đặt mục tiêu rõ ràng, công nhận tiến bộ, xác định ý nghĩa thành công và duy trì tư duy tích cực. Thời điểm 2-3 tuần trước ngày đua rất quan trọng, cần chú ý đến cả thể chất và tâm lý. Những mẹo hữu ích giúp runner tăng cường động lực và cải thiện hiệu suất trong cuộc đua sắp tới.",
     "link": "https://vnexpress.net/8-buoc-len-day-cot-tinh-than-truoc-ngay-chay-giai-4864017.html",
@@ -3594,6 +3594,33 @@
       },
       {
         "text": "Không cần lên kế hoạch tập luyện",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Phụ nữ tiền mãn kinh ăn gì cân bằng nội tiết?",
+    "content": "Phụ nữ trong giai đoạn tiền mãn kinh thường gặp nhiều triệu chứng khó chịu như mất ngủ, mệt mỏi và bốc hỏa. Để cân bằng nội tiết tố, chế độ dinh dưỡng đóng vai trò quan trọng. Các thực phẩm giàu phytoestrogen như hạt lanh và đậu nành, canxi và vitamin D từ rau lá xanh và sữa, chất xơ từ ngũ cốc và trái cây, cũng như chất béo lành mạnh từ cá béo và hạt chia có thể hỗ trợ giảm triệu chứng. Ngoài ra, bổ sung các tinh chất thiên nhiên cũng giúp cải thiện tình trạng sức khỏe của phụ nữ trong giai đoạn này.",
+    "link": "https://vnexpress.net/phu-nu-tien-man-kinh-an-gi-can-bang-noi-tiet-4864193.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Phụ nữ tiền mãn kinh nên ăn gì để cân bằng nội tiết tố?",
+    "answers": [
+      {
+        "text": "Thực phẩm giàu phytoestrogen như hạt lanh và đậu nành",
+        "correct": true
+      },
+      {
+        "text": "Thịt đỏ và đồ chiên",
+        "correct": false
+      },
+      {
+        "text": "Đồ uống có ga",
+        "correct": false
+      },
+      {
+        "text": "Thực phẩm chế biến sẵn",
         "correct": false
       }
     ]
@@ -4113,33 +4140,6 @@
     ]
   },
   {
-    "title": "Đầu bếp người Nga lãnh án 18 năm tù vì giết đồng hương ở Bình Thuận",
-    "content": "Ngày 21-3, Tòa án nhân dân tỉnh Bình Thuận đã tuyên phạt Roman Nikiforow, 41 tuổi, quốc tịch Nga, 18 năm tù giam vì tội giết người. Trước đó, Roman và đồng hương Vasilii Echushin xảy ra mâu thuẫn, dẫn đến việc Roman dùng búa đánh chết Vasilii. Sau khi gây án, Roman đã phi tang thi thể của nạn nhân và xóa dấu vết tại hiện trường.",
-    "link": "https://tuoitre.vn/dau-bep-nguoi-nga-lanh-an-18-nam-tu-vi-giet-dong-huong-o-binh-thuan-20250321145201105.htm",
-    "cat": "phap-luat",
-    "positivity": 1,
-    "importance": 7,
-    "question": "Tại sao Roman Nikiforow bị tuyên án 18 năm tù ở Bình Thuận?",
-    "answers": [
-      {
-        "text": "Vì tội giết người",
-        "correct": true
-      },
-      {
-        "text": "Vì trộm cắp tài sản",
-        "correct": false
-      },
-      {
-        "text": "Vì lừa đảo",
-        "correct": false
-      },
-      {
-        "text": "Vì hành hung người khác",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tái tạo lưỡi cho chàng trai ung thư",
     "content": "Chàng trai 26 tuổi ở TP HCM bị ung thư lưỡi trái và di căn hạch dưới hàm đã trải qua ca phẫu thuật cắt u và tái tạo lưỡi bằng vạt da ở đùi. Ca phẫu thuật diễn ra trong 8 giờ với sự tham gia của hai êkíp bác sĩ, cho phép khôi phục hình thể và chức năng lưỡi cho bệnh nhân. Sau phẫu thuật, bệnh nhân có thể đi lại và tập nuốt, cho thấy sự thành công trong việc phục hồi chức năng nói và nuốt.",
     "link": "https://vnexpress.net/tai-tao-luoi-cho-chang-trai-ung-thu-4863881.html",
@@ -4162,6 +4162,33 @@
       },
       {
         "text": "Bằng việc thay thế lưỡi bằng một bộ phận nhân tạo.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đầu bếp người Nga lãnh án 18 năm tù vì giết đồng hương ở Bình Thuận",
+    "content": "Ngày 21-3, Tòa án nhân dân tỉnh Bình Thuận đã tuyên phạt Roman Nikiforow, 41 tuổi, quốc tịch Nga, 18 năm tù giam vì tội giết người. Trước đó, Roman và đồng hương Vasilii Echushin xảy ra mâu thuẫn, dẫn đến việc Roman dùng búa đánh chết Vasilii. Sau khi gây án, Roman đã phi tang thi thể của nạn nhân và xóa dấu vết tại hiện trường.",
+    "link": "https://tuoitre.vn/dau-bep-nguoi-nga-lanh-an-18-nam-tu-vi-giet-dong-huong-o-binh-thuan-20250321145201105.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 7,
+    "question": "Tại sao Roman Nikiforow bị tuyên án 18 năm tù ở Bình Thuận?",
+    "answers": [
+      {
+        "text": "Vì tội giết người",
+        "correct": true
+      },
+      {
+        "text": "Vì trộm cắp tài sản",
+        "correct": false
+      },
+      {
+        "text": "Vì lừa đảo",
+        "correct": false
+      },
+      {
+        "text": "Vì hành hung người khác",
         "correct": false
       }
     ]
@@ -4229,6 +4256,33 @@
     ]
   },
   {
+    "title": "Tiêm vaccine HPV có làm teo buồng trứng không?",
+    "content": "Vaccine HPV không làm teo buồng trứng hoặc ảnh hưởng đến khả năng sinh sản của phụ nữ. Nghiên cứu cho thấy những người tiêm vaccine không có nguy cơ cao bị suy buồng trứng so với người chưa tiêm. Vaccine này được khuyến nghị bởi Tổ chức Y tế thế giới (WHO) như một biện pháp hiệu quả để phòng ngừa các bệnh do virus HPV gây ra, bao gồm ung thư cổ tử cung.",
+    "link": "https://vnexpress.net/tiem-vaccine-hpv-co-lam-teo-buong-trung-khong-4864194.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Tiêm vaccine HPV có gây ảnh hưởng đến buồng trứng không?",
+    "answers": [
+      {
+        "text": "Không, vaccine HPV không gây ảnh hưởng đến buồng trứng.",
+        "correct": true
+      },
+      {
+        "text": "Có, vaccine HPV làm teo buồng trứng.",
+        "correct": false
+      },
+      {
+        "text": "Có thể, vaccine HPV gây ra một số vấn đề sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Không rõ, cần nghiên cứu thêm về vaccine HPV.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thủ phạm gây đau rốn",
     "content": "Đau rốn có thể do nhiều nguyên nhân khác nhau, trong đó khó tiêu là nguyên nhân phổ biến nhất. Các nguyên nhân nghiêm trọng khác bao gồm viêm ruột thừa, viêm dạ dày, và bệnh Crohn. Đau rốn có thể kèm theo các triệu chứng như buồn nôn, tiêu chảy, và cảm giác nóng rát, tùy thuộc vào nguyên nhân cụ thể. Ngoài ra, táo bón và nhiễm trùng cũng là những yếu tố có thể gây ra cơn đau này.",
     "link": "https://vnexpress.net/thu-pham-gay-dau-ron-4864078.html",
@@ -4255,33 +4309,6 @@
       },
       {
         "text": "Bệnh Crohn",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tiêm vaccine HPV có làm teo buồng trứng không?",
-    "content": "Vaccine HPV không làm teo buồng trứng hoặc ảnh hưởng đến khả năng sinh sản của phụ nữ. Nghiên cứu cho thấy những người tiêm vaccine không có nguy cơ cao bị suy buồng trứng so với người chưa tiêm. Vaccine này được khuyến nghị bởi Tổ chức Y tế thế giới (WHO) như một biện pháp hiệu quả để phòng ngừa các bệnh do virus HPV gây ra, bao gồm ung thư cổ tử cung.",
-    "link": "https://vnexpress.net/tiem-vaccine-hpv-co-lam-teo-buong-trung-khong-4864194.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Tiêm vaccine HPV có gây ảnh hưởng đến buồng trứng không?",
-    "answers": [
-      {
-        "text": "Không, vaccine HPV không gây ảnh hưởng đến buồng trứng.",
-        "correct": true
-      },
-      {
-        "text": "Có, vaccine HPV làm teo buồng trứng.",
-        "correct": false
-      },
-      {
-        "text": "Có thể, vaccine HPV gây ra một số vấn đề sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Không rõ, cần nghiên cứu thêm về vaccine HPV.",
         "correct": false
       }
     ]
@@ -4796,33 +4823,6 @@
       },
       {
         "text": "Hơn 35 triệu đồng/tháng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hà Nội sẽ dựng cột mốc Km0 bên Hồ Gươm",
-    "content": "Hà Nội sẽ lắp đặt cột mốc Km0 tại vườn hoa Lý Thái Tổ, gần tượng đài Lý Thái Tổ, nhằm nâng cao giá trị lịch sử và văn hóa khu vực Hồ Gươm. Dự án này không chỉ cải tạo cảnh quan mà còn bổ sung các trang thiết bị đô thị hiện đại, dự kiến hoàn thành vào tháng 10 năm 2025. Thiết kế cột mốc sẽ mang đậm tính biểu tượng của Thủ đô với công nghệ chiếu sáng đặc biệt.",
-    "link": "https://vnexpress.net/ha-noi-se-dung-cot-moc-km0-ben-ho-guom-4864124.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Hà Nội sẽ lắp đặt cột mốc Km0 ở đâu?",
-    "answers": [
-      {
-        "text": "Vườn hoa Lý Thái Tổ",
-        "correct": true
-      },
-      {
-        "text": "Công viên Thống Nhất",
-        "correct": false
-      },
-      {
-        "text": "Quảng trường Ba Đình",
-        "correct": false
-      },
-      {
-        "text": "Công viên Nghĩa Đô",
         "correct": false
       }
     ]
